<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="@dimen/dialog_layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/app_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_layout_padding">

            <EditText
                android:id="@+id/app_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoComplete|textAutoCorrect"
                android:hint="@string/app_name_input_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/app_author_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/app_author_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoComplete|textAutoCorrect|textMultiLine"
                android:hint="@string/app_author_input_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/app_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/app_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoComplete|textAutoCorrect|textMultiLine"
                android:hint="@string/app_description_input_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/app_version_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/app_version_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoComplete|textAutoCorrect|textMultiLine"
                android:hint="@string/app_version_input_hint"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>